# app/models/db/chi_tiet_san_pham.go
@@ -6,7 +6,7 @@ type Chi_tiet_san_pham struct {
 	gorm.Model
 	
 	ID							uint						`json:"ID"`
-	San_pham_id   				int							`json:"san_pham_id"`
+	San_pham_id   				uint							`json:"san_pham_id"`
 	Ten_phan_loai 				string 						`json:"ten_phan_loai"`
 	Hinh_anh					string						`json:"hinh_anh"`
 	Gia_nhap					float32						`json:"gia_nhap"`
@@ -17,5 +17,6 @@ type Chi_tiet_san_pham struct {
 
 	San_pham 					San_pham 					`json:"san_pham"`
 	Chi_tiet_hoa_don_nhap_kho 	[]Chi_tiet_hoa_don_nhap_kho `json:"chi_tiet_hoa_don_nhap_kho" gorm:"foreignKey:ctsp_id"`
+	Chi_tiet_hoa_don_xuat_kho 	[]Chi_tiet_hoa_don_xuat_kho `json:"chi_tiet_hoa_don_xuat_kho" gorm:"foreignKey:ctsp_id"`
 	Ton_kho						[]Ton_kho					`json:"ton_kho" gorm:"foreignKey:ctsp_id"`
 }
