# app/models/db/ton_kho.go
@@ -5,11 +5,11 @@ import "gorm.io/gorm"
 type Ton_kho struct {
 	gorm.Model
 
-	San_pham_id					int							`json:"san_pham_id"`
-	Ctsp_id						int							`json:"ctsp_id"`
+	San_pham_id					uint							`json:"san_pham_id"`
+	Ctsp_id						uint							`json:"ctsp_id"`
 	Sku 						string						`json:"sku"`
 	So_luong_ton				int							`json:"so_luong_ton"`
 
-	San_pham					San_pham					`json:"san_pham"`
-	Chi_tiet_san_pham			Chi_tiet_san_pham			`json:"chi_tiet_san_pham"`
+	San_pham					San_pham					`json:"san_pham" gorm:"foreignKey:San_pham_id"`
+	Chi_tiet_san_pham			Chi_tiet_san_pham			`json:"chi_tiet_san_pham" gorm:"foreignKey:Ctsp_id"`
 }
